objects/Account.object
<CustomObject>
    <fields>
        <fullName>DM_Available__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DM Available</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <label>DUNS Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Last_Verified__c</fullName>
        <inlineHelpText>When was Universal Segment, National Company Type, Parent Ownership Structure, and Number of Locations last verified or confirmed?</inlineHelpText>
        <label>Data Last Verified Date?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Berry_Contract_Received__c</fullName>
        <label>zzzDate Berry Contract Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_CVR_OPT_Exhausted_del__c</fullName>
        <label>Date of Do Not Opt for PPL Issue</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Do_Not_OPT_For_Other_Reason_del__c</fullName>
        <label>Date of Do Not Opt for Lead Range</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Email_added_to_Marketo__c</fullName>
        <label>Date Email added to Marketo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Overspend_OPT_Exhausted_del__c</fullName>
        <label>Date of Do Not Opt for Overspend</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Pitched__c</fullName>
        <label>Date Pitched</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Rogers_Payment_Received__c</fullName>
        <label>Date Rogers Payment Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Sandbox_ID_Added_to_Group_142__c</fullName>
        <label>Date Sandbox ID Added to Group 142</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Underspend_OPT_Exhausted_del__c</fullName>
        <label>Date of Do Not Opt for Underspend</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Do_Not_Opt_for_Low_Lead_Volu_del__c</fullName>
        <label>Date of Do Not Opt for Low Lead Volume</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Customer_Performance_Review__c</fullName>
        <label>Date of Last Customer Performance Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Customer_Status_Call__c</fullName>
        <label>Date of Last Customer Status Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Internal_Roundtable_Meeting__c</fullName>
        <label>Date of Last Internal Roundtable Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Internal_Sales_Meeting__c</fullName>
        <label>Date of Last Internal Sales Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_QBR__c</fullName>
        <label>Date of Last QBR</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Sales_AD_Meeting__c</fullName>
        <label>Date of Last Performance Reporting Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Stakeholder_Meeting__c</fullName>
        <label>Date of Last Stakeholder Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Proactive_Pause_for_MSN_Partner__c</fullName>
        <label>Date of Proactive Pause for MSN Partner</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Account_Owned_by_Rep__c</fullName>
        <label>Days Account Owned by Rep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Live_Equivalent__c</fullName>
        <formula>IF(NOT(ISPICKVAL(Status__c,'LIVE')), null,
IF(CONTAINS(Product_Type_Transactional__c ,'TORCHx'), (TODAY() - CSC_Completed_Date__c) - Days_in_Save_Mode__c, Days_Since_Live__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days Live Equivalent equals Days Since Live except with TORCHx. For TORCHx, Days Live Equivalent is (Today - CSC Completed Date) - Days in Save Mode</inlineHelpText>
        <label>Days Live Equivalent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Live_Text__c</fullName>
        <formula>text( Days_Live__c )</formula>
        <label>Days Live Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Live__c</fullName>
        <label>Days Live</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Activity__c</fullName>
        <formula>TODAY()-LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Activity</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Live_Text__c</fullName>
        <formula>text( Days_Since_Live__c )</formula>
        <label>Days Since Live Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Since_Live__c</fullName>
        <formula>today()- Live_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Live</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Organic_Live_Date__c</fullName>
        <formula>TODAY()-Organic_Live_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Organic Live Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Escalated_Status__c</fullName>
        <label>Days in Escalated Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Save_Mode__c</fullName>
        <inlineHelpText>Used for Accounts going into Save Mode from Cancellation Request Forms!</inlineHelpText>
        <label>Days in Save Mode</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_Created__c</fullName>
        <formula>today()- Order_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_booked__c</fullName>
        <formula>(today()- Order_Date__c)</formula>
        <label>Days since booked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Live_without_Escalated__c</fullName>
        <formula>Days_to_go_Live__c - Days_in_Escalated_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Live without Escalated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_go_Live__c</fullName>
        <formula>if(isnull(Live_Date__c),
today()- Order_Date__c,
CASE(MOD( Order_Date__c - DATE(1985,6,24),7),
  0 , CASE( MOD( Live_Date__c  - Order_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
  1 , CASE( MOD( Live_Date__c - Order_Date__c,7),1,1,2,2,3,3,4,4,5,4,6,5,0),
  2 , CASE( MOD( Live_Date__c  - Order_Date__c,7),1,1,2,2,3,3,4,3,5,4,6,5,0),
  3 , CASE( MOD( Live_Date__c - Order_Date__c ,7),1,1,2,2,3,2,4,3,5,4,6,5,0),
  4 , CASE( MOD(Live_Date__c - Order_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,0),
  5 , CASE( MOD( Live_Date__c - Order_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
  6 , CASE( MOD( Live_Date__c - Order_Date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
  999)
  +
  (FLOOR(( Live_Date__c - Order_Date__c )/7)*5)
)</formula>
        <label>Days to Go Live</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deactivation_Date__c</fullName>
        <description>Date client was deactivated (churned)</description>
        <label>Deactivation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deactivation_Reason_Code__c</fullName>
        <description>The reason code entered by the IMS for why the client was deactivated.</description>
        <label>Deactivation Reason Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Advertising_Restrictions__c</fullName>
        <inlineHelpText>Can individual locations advertise services on their website that are not offered by the manufacturer? Can they promote these services?</inlineHelpText>
        <label>Dealer Advertising Restrictions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Design_Fee_Manually_billed__c</fullName>
        <label>Design Fee-Manually billed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Design_Fee__c</fullName>
        <label>Design Fee</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Designer_Name2__c</fullName>
        <label>Partner Business Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desired_URL2__c</fullName>
        <label>Desired URL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desired_URL__c</fullName>
        <label>Ad Domain URL</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details_on_what_locations_can_customize__c</fullName>
        <inlineHelpText>Specific details on what individual locations can and cannot customize as dictated by corporate</inlineHelpText>
        <label>Details on what locations can customize</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Digital_Marketing_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Digital Marketing Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsIjJw</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Digital_Strategy_Overview__c</fullName>
        <label>Digital Strategy Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Director_Update_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Need Director Update on Account due to lack of activity</description>
        <label>Director Update Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distributor_Company__c</fullName>
        <inlineHelpText>Pulled from JCI portal</inlineHelpText>
        <label>Distributor Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Owner__c</fullName>
        <label>Division Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Opt_for_Low_Lead_Volume_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Opt for Low Lead Volume</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_not_OPT_for_other_reason_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Opt for Lead Range</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Early_Oct_Promo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allows rep to apply a 40% credit to the 1st month's budget of a new client, with a max of $400</inlineHelpText>
        <label>Early Oct Promo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Signature_Line_1__c</fullName>
        <description>The Signature field will populate with the signature that is appropriate to the channel.</description>
        <formula>IF(CONTAINS(Product_Type_Transactional__c, "TORCHx"),"TORCHx Support", IF(ispickval(Client_Type__c,"Local"), "Yodle Customer Care", IF(ispickval(Client_Type__c,"Lighthouse"), "Lighthouse Support", IF(ispickval(   Channel_Development__c   ,"Rogers"), "Customer Support", ""))))</formula>
        <inlineHelpText>The Signature field will populate with the signature that is appropriate to the channel.</inlineHelpText>
        <label>Email Signature Line 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Signature_Line_2__c</fullName>
        <description>The Signature field will populate with the signature that is appropriate to the channel.</description>
        <formula>IF(CONTAINS(Product_Type_Transactional__c, "TORCHx"),"888-428-9659",IF((ispickval(Client_Type__c,"Local")), "T/F: 877-334-4321", IF((ispickval(Client_Type__c,"Lighthouse")), "T: 888-427-5454", IF((ispickval(  Channel_Development__c  ,"Rogers")), "OutRank by Rogers",""))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Signature field will populate with the signature that is appropriate to the channel.</inlineHelpText>
        <label>Email Signature Line 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Signature_Line_3__c</fullName>
        <description>The Signature field will populate with the signature that is appropriate to the channel.</description>
        <formula>IF(CONTAINS(Product_Type_Transactional__c, "TORCHx"),"support@torchx.com",IF((ispickval(Client_Type__c,"Local")), "customercare@yodle.com", IF((ispickval(Client_Type__c,"Lighthouse")), "F: 888-427-5375", IF((ispickval( Channel_Development__c ,"Rogers")), "866-269-1710",""))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Signature field will populate with the signature that is appropriate to the channel.</inlineHelpText>
        <label>Email Signature Line 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_for_Touchplan__c</fullName>
        <label>Email for Touchplan</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_for_converting__c</fullName>
        <label>Email (for converting)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Consumer_Media_Research__c</fullName>
        <label>End Consumer Media Research</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Engagement_Data_Last_Update__c</fullName>
        <inlineHelpText>Date/Time of when the Engagement Data was last updated!</inlineHelpText>
        <label>Engagement Data Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Engagement_Date_Last_Email_Sent__c</fullName>
        <label>ENG - Date Last Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Engagement_Date_Last_Offer_Created__c</fullName>
        <label>ENG - Date Last Offer Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Engagement_Date_Last_Review_Requested__c</fullName>
        <label>ENG - Date Last Review Requested</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Engagement_Date_Last_Triggered_Email__c</fullName>
        <label>ENG - Date Last Triggered Email Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Engagement_Has_Active_Offer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ENG - Has Active Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engagement_Has_Completed_Bulk_Import__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ENG - Has Completed Bulk Contact Import</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engagement_Num_Automated_Email_Activated__c</fullName>
        <label>ENG - Num Automated Emails Activated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Num_Contacts__c</fullName>
        <label>ENG - Number of Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Num_Emails_Sent__c</fullName>
        <label>ENG - Number of Emails Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Num_Offers__c</fullName>
        <label>ENG - Number of Offers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Num_Review_Request_Last_7_Day__c</fullName>
        <label>ENG - Num Review Requests Last 7 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engine_Ready__c</fullName>
        <label>zzzEngine Ready</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entered_Save_Mode__c</fullName>
        <label>Entered Save Mode</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entitlement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is used for the process builder and flows to run the LH, Local and Partner Entitlement/Milestone project.</description>
        <label>Entitlement</label>
        <referenceTo>Entitlement</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Essentials_Fee__c</fullName>
        <label>Essentials Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exclude_from_AutoTP_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>As  CSC Rep or CS Manager (Salesforce profiles National IMS, National CS Manager)
I want ..a new Salesforce Account checkbox field call Exclude from AutoTP Process
So that ...accounts can be excluded from auto TP process</description>
        <label>Exclude from AutoTP Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Sales__c</fullName>
        <label>Existing Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Leads__c</fullName>
        <label>Expected Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_PPL__c</fullName>
        <label>Expected PPL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FRANCHISE_FEE__c</fullName>
        <label>Franchise Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FRANCHISE_ROYALTY_FEE__c</fullName>
        <label>Franchise Royalty Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Facebook_Ads_Live_Date__c</fullName>
        <description>Date of when Facebook Ads was added onto the Account "Product Type" field.  Used By YBN.</description>
        <label>Facebook Ads Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Failed_to_Sync_to_Marketo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Failed to Sync to Marketo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_rep_role__c</fullName>
        <formula>Sales_Person__r.UserRole.Name</formula>
        <label>First rep role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Force_Field_Sales_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsIQ46</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Franchise_MultiLocation_Segment_Color__c</fullName>
        <formula>"xx_Field_To_Be_Removed"</formula>
        <label>Franchise/MultiLocation Segment Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Franchise__c</fullName>
        <inlineHelpText>What are the rules for individual locations as part of their agreement with corporate. Example - franchisees cannot advertise with vendors that are not approved by corporate.</inlineHelpText>
        <label>Franchise or Manufacturer Business Rules</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Free_Trial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Free Trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GMBL_Login_Email_Parent__c</fullName>
        <formula>Parent.GMBL_Login_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GMBL Login Email (Parent)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMBL_Login_Email__c</fullName>
        <label>GMBL Login Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMBL_Login_Password_Parent__c</fullName>
        <formula>Parent.GMBL_Login_Password__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GMBL Login Password (Parent)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMBL_Login_Password__c</fullName>
        <label>GMBL Login Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GOLD_Spiff__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>If the account is in a  GOLD segment when booked, this will provide the amount of the SPIFF to the salesrep</inlineHelpText>
        <label>GOLD Spiff</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GREEN_Spiff__c</fullName>
        <inlineHelpText>If the account is in a GREEN segment when booked, the amount of the SPIFF will be shown here</inlineHelpText>
        <label>GREEN Spiff</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Geo_Coverage_Opportunity__c</fullName>
        <formula>((100-SEO_Rank_Check__c)/100)* Geographic_Reach__c</formula>
        <label>Geo Coverage Opportunity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Geographic_Reach__c</fullName>
        <description>Identifies the number of markets addressed.</description>
        <label>Geographic Reach</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Geographical_Areas_to_Service__c</fullName>
        <label>Geographical Areas to Service</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_AdWords_ID__c</fullName>
        <label>Google AdWords ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Maps_URL__c</fullName>
        <label>Google Review URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Google_Pin_Status__c</fullName>
        <description>This field is created by Rogers to push the Google Pin Status from Organic Case to Account using a trigger on Organic Case</description>
        <inlineHelpText>Current Google Pin Status on Organic Case</inlineHelpText>
        <label>Google Pin Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_White_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grandchildren_Accounts_Live__c</fullName>
        <label>Grandchildren Accounts Live</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Great_Grandchildren_Accounts_Live__c</fullName>
        <label>Great-Grandchildren Accounts Live</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Historical_Performance_Benchmarks__c</fullName>
        <inlineHelpText>Performance data for previous campaigns with other providers</inlineHelpText>
        <label>Historical Performance Benchmarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hold_Status_Date__c</fullName>
        <description>Used in conjunction with the "Account Hold Status" field.  Sets a date to release an account from "hold" status.
Used by YBN.</description>
        <inlineHelpText>Account will be transferred after this date.</inlineHelpText>
        <label>Hold Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>How_do_decisions_get_made_within_an_org__c</fullName>
        <inlineHelpText>Who makes marketing decisions and what is the process for making changes to current marketing</inlineHelpText>
        <label>How do decisions get made within an org?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_is_success_being_measured__c</fullName>
        <inlineHelpText>Example - CRM integration, customer will be providing weekly reporting, Yodle reporting etc.</inlineHelpText>
        <label>How is success being measured?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ICU_Account__c</fullName>
        <label>ICU Account</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ILs_Live__c</fullName>
        <formula>Children_Accounts_Live__c  +  Grandchildren_Accounts_Live__c +   Great_Grandchildren_Accounts_Live__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ILs Live</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IMS_Referral__c</fullName>
        <label>IMS Referral</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMS_Rep_Email__c</fullName>
        <formula>IMS_Rep__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IMS Rep Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMS_Rep_Full_Name__c</fullName>
        <formula>IMS_Rep__r.FirstName + " " + IMS_Rep__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IMS Rep Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMS_Rep_Phone__c</fullName>
        <formula>IMS_Rep__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IMS Rep Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMS_Rep_Role__c</fullName>
        <formula>IMS_Rep__r.UserRole.Name</formula>
        <label>IMS Rep Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMS_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IMS Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IMS_Team__c</fullName>
        <formula>IMS_Rep__r.Manager.FirstName &amp; " " &amp; IMS_Rep__r.Manager.LastName</formula>
        <label>IMS Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Other_what_is_your_title__c</fullName>
        <label>If Other, what is your title?</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_other_system_please_specify__c</fullName>
        <label>If "Other" System Please Specify</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_program_in_past_website__c</fullName>
        <label>If program in past, website?</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Important_Account_Notes__c</fullName>
        <label>Important Account Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Important_National_Notes__c</fullName>
        <label>Important Account Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inbound__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inbound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Pacing__c</fullName>
        <formula>AND(
  TEXT(Status__c) = "LIVE",
  TEXT(Client_Contact_Preference__c) &lt;&gt; "Prefers No Contact",
  ISBLANK(Entered_Save_Mode__c),
  TEXT(Client_Type__c) = "YBN",
  OR(
    TEXT(Individual_Location_Service_Level__c) = "Service Level A+",
    TEXT(Individual_Location_Service_Level__c) = "Service Level A",
    TEXT(Individual_Location_Service_Level__c) = "Service Level B",
    TEXT(Individual_Location_Service_Level__c) = "Service Level C",
    TEXT(Individual_Location_Service_Level__c) = "Service Level D"
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include Pacing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Infusion_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Infusion Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Resolved_Survey_Send_Date__c</fullName>
        <label>Issue Resolution Survey Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Survey_Sent__c</fullName>
        <description>Used to mark when an Issue Resolution Survey was sent.  Used by YBN.</description>
        <label>Issue Survey Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JCI_About_Us_Content__c</fullName>
        <label>JCI About Us Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JCI_Angies_List_Link__c</fullName>
        <label>JCI Angies List Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JCI_Custom_Logo__c</fullName>
        <label>JCI Custom Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JCI_Facebook_Link__c</fullName>
        <label>JCI Facebook Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JCI_Google_Link__c</fullName>
        <label>JCI Google+ Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JCI_Liberties_ID__c</fullName>
        <label>JCI Liberties ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JCI_Payment_Method__c</fullName>
        <label>JCI Payment Method</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JCI_Template_ID__c</fullName>
        <label>JCI Template ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JCI_Twitter_Link__c</fullName>
        <label>JCI Twitter Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JCI_Upsold_to_PPC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to flag accounts that were upsold to PPC prior to coming into the portal</description>
        <label>JCI Upsold to PPC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JCI_YouTube_Link__c</fullName>
        <label>JCI YouTube Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LHFS_Self_Sign_Up__c</fullName>
        <formula>Sales_Person__r.Full_Name__c = "Lighthouse Customer Care"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LHFS Self Sign-Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LH_360_ID__c</fullName>
        <inlineHelpText>This is the corresponding Lighthouse 360 ID for Yodle/Lighthouse overlap customers.</inlineHelpText>
        <label>LH 360 ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LH_Chiro_Package_Upgraded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LH Chiro Package Upgraded</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>